# ip-intelligence-cxx

./: .gitmodules  CMakeLists.txt  Directory.Build.props  README.md  STORED_WEIGHTED_VALUE_DESIGN_PROPOSAL.md  WEIGHTED_STRING_STORED_VALUE_PROPOSAL.md  build-and-test.yml  build.yml
4.4/: _2home_2runner_2work_2ip-intelligence-cxx_2ip-intelligence-cxx_2common_2ip-intelligence-cxx_2src_2common-cxx_2string_8h-example.html  _2home_2runner_2work_2ip-intelligence-cxx_2ip-intelligence-cxx_2common_2ip-intelligence-cxx_2srca007c27fbd32290d4ff8aa19bafb79fc.html  _base_8hpp_source.html  _collection_8hpp_source.html  _collection_config_8hpp_source.html  _component_meta_data_8hpp_source.html  _component_meta_data_builder_ipi_8hpp_source.html  _component_meta_data_collection_ipi_8hpp_source.html  _config_base_8hpp_source.html  _config_ipi_8hpp_source.html  _date_8hpp_source.html  _engine_base_8hpp_source.html  _engine_ipi_8hpp_source.html  _engine_tests_8hpp_source.html  _entity_meta_data_8hpp_source.html  _entity_meta_data_builder_8hpp_source.html  _evidence_base_8hpp_source.html  _evidence_ipi_8hpp_source.html  _evidence_tests_8hpp_source.html  _example_base_8h_source.html  _example_base_8hpp_source.html  _example_tests_8hpp_source.html  _exceptions_8hpp_source.html  _fiftyone_degrees_8hpp_source.html  _file_handle_8hpp_source.html  _fixed_size_collection_8hpp_source.html  _headers_container_8hpp_source.html  _ip_address_8hpp_source.html  _ip_intelligence_2_find_profiles_8c-example.html  _ip_intelligence_2_getting_started_8c-example.html  _ip_intelligence_2_getting_started_8cpp-example.html  _ip_intelligence_2_meta_data_8cpp-example.html  _ip_intelligence_2_offline_processing_8c-example.html  _ip_intelligence_2_perf_ipi_8c-example.html  _ip_intelligence_2_performance_8c-example.html  _ip_intelligence_2_reload_from_file_8c-example.html  _ip_intelligence_2_reload_from_file_8cpp-example.html  _ip_intelligence_2_reload_from_memory_8c-example.html  _ip_intelligence_2_reload_from_memory_8cpp-example.html  _ip_intelligence_2_strongly_typed_8c-example.html  (+676 more)
4.5/: _2home_2runner_2work_2ip-intelligence-cxx_2ip-intelligence-cxx_2common_2ip-intelligence-cxx_2src_2common-cxx_2string_8h-example.html  _2home_2runner_2work_2ip-intelligence-cxx_2ip-intelligence-cxx_2common_2ip-intelligence-cxx_2srca007c27fbd32290d4ff8aa19bafb79fc.html  _base_8hpp_source.html  _collection_8hpp_source.html  _collection_config_8hpp_source.html  _component_meta_data_8hpp_source.html  _component_meta_data_builder_ipi_8hpp_source.html  _component_meta_data_collection_ipi_8hpp_source.html  _config_base_8hpp_source.html  _config_ipi_8hpp_source.html  _date_8hpp_source.html  _engine_base_8hpp_source.html  _engine_ipi_8hpp_source.html  _engine_tests_8hpp_source.html  _entity_meta_data_8hpp_source.html  _entity_meta_data_builder_8hpp_source.html  _evidence_base_8hpp_source.html  _evidence_ipi_8hpp_source.html  _evidence_tests_8hpp_source.html  _example_base_8h_source.html  _example_base_8hpp_source.html  _example_tests_8hpp_source.html  _exceptions_8hpp_source.html  _fiftyone_degrees_8hpp_source.html  _file_handle_8hpp_source.html  _fixed_size_collection_8hpp_source.html  _headers_container_8hpp_source.html  _ip_address_8hpp_source.html  _ip_intelligence_2_find_profiles_8c-example.html  _ip_intelligence_2_getting_started_8c-example.html  _ip_intelligence_2_getting_started_8cpp-example.html  _ip_intelligence_2_meta_data_8cpp-example.html  _ip_intelligence_2_offline_processing_8c-example.html  _ip_intelligence_2_perf_ipi_8c-example.html  _ip_intelligence_2_performance_8c-example.html  _ip_intelligence_2_reload_from_file_8c-example.html  _ip_intelligence_2_reload_from_file_8cpp-example.html  _ip_intelligence_2_reload_from_memory_8c-example.html  _ip_intelligence_2_reload_from_memory_8cpp-example.html  _ip_intelligence_2_strongly_typed_8c-example.html  (+1102 more)
VisualStudio/: IpIntelligence.sln
ci/: README.md  fetch-assets.ps1  options.json  run-performance-tests.ps1  run-unit-tests.ps1
docs/: Doxyfile  DoxygenLayout.xml
rust-poc/: Cargo.toml  README.md  build.rs  config_helpers.c
src/: BinaryValue.cpp  BinaryValue.hpp  ComponentMetaDataBuilderIpi.cpp  ComponentMetaDataBuilderIpi.hpp  (+62 more)
(+81 files in other folders)
